--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     volumes:
       - https_domains:/app/domains
       - https_data:/root/.local/share
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   https_data:
